--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,12 +12,12 @@ body {
   font-family: "Roboto", sans-serif;
 }
 
-body ul {
+body header ul {
   list-style: none;
   margin: 0;
 }
 
-body ul li {
+body header ul li {
   display: inline-block;
   padding: 0 10px;
 }
