--- a/resources/sass/partials/_common.scss
+++ b/resources/sass/partials/_common.scss
@@ -10,14 +10,17 @@ body {
     color: white;
     font-family: 'Roboto', sans-serif;
 
-    ul {
-        list-style: none;
-        margin: 0;
-        li {
-            display: inline-block;
-            padding: 0 10px;
+    header {
+        ul {
+            list-style: none;
+            margin: 0;
+            li {
+                display: inline-block;
+                padding: 0 10px;
+            }
         }
     }
+
 }
 
 
