--- a/resources/sass/style.scss
+++ b/resources/sass/style.scss
@@ -1,3 +1,4 @@
+@import '~@fortawesome/fontawesome-free/css/all.css';
 @import 'partials/_variables';
 @import 'partials/_mixins';
 @import 'partials/_common';
